Safari spacing fixup

--- a/src/scss/components/news-vertical-teaser/_news-vertical-teaser.scss
+++ b/src/scss/components/news-vertical-teaser/_news-vertical-teaser.scss
@@ -207,6 +207,10 @@
         @include centered-column;
 
         margin-bottom: 4.5rem;
+
+        .su-news-vertical-teaser {
+          margin-bottom: 0;
+        }
       }
     }
 
